[project]
name = "ilc-models"
dynamic = ["version"]
description = "Data models for the ILC project"
readme = "README.md"
authors = [
    { name = "Neil Martin", email = "neil@fourtrees.tech" }
]
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "pydantic>=2.10.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/ilc_models/__init__.py"

[tool.mypy]
packages = ["src.ilc_models"]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
]
