[project]
name = "ilc-models"
dynamic = ["version"]
description = "Data models for the ILC project"
readme = "README.md"
authors = [
    { name = "Neil Martin", email = "neil@fourtrees.tech" }
]
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "pydantic>=2.10.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/ilc_models/__init__.py"

[tool.mypy]
packages = ["ilc_models", "tests.conftest"]

# [tool.pytest.ini_options]
# addopts = "--cov-report term-missing --cov=ilc_models tests/"

[dependency-groups]
dev = [
    "faker>=37.0.0",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-randomly>=3.16.0",
]
